# slidedeck-ai

./: .gitignore  README.md
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/engine/: __init__.py  builder.py  renderer.py  scanner.py
apps/api/app/models/: __init__.py  requests.py  slide.py
apps/api/app/routers/: __init__.py  presentations.py
apps/api/app/services/: __init__.py  llm_service.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: ChatPanel.tsx  Header.tsx  SlidePreview.tsx
apps/web/src/lib/: api.ts  store.ts
apps/web/src/types/: schema.ts
infrastructure/: docker-compose.yml
scripts/: gen-types.sh
